Fix navbar spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,15 +14,6 @@ footer {
   display: flex;
 }
 
-#home {
-  background-color: #14213D;
-  color: #ffffff;
-}
-
-#name {
-  color: #FF8811;
-}
-
 .row {
   flex-direction: row;
 }
@@ -50,6 +41,10 @@ footer {
 .navbar {
   background-color: #14213D;
   display: flex;
+  width: 100%;
+}
+
+#nav {
   width: 100%;
   position: fixed;
   top: 0px;
@@ -80,4 +75,17 @@ footer {
 
 .full-height {
   height: 100vh;
+}
+
+#home {
+  background-color: #14213D;
+  color: #ffffff;
+}
+
+#name {
+  color: #FF8811;
+}
+
+#main-header {
+  font-size: 1.5em;
 }
